# typer-cli-template

./: README.md  bootstrap.py  pyproject.toml  variables.json
PACKAGE_NAME/: __init__.py
PACKAGE_NAME/cli/: __init__.py  sample.py
