[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PACKAGE_NAME"
authors = [{ name = "Marco Toschi", email = "marco.toschi@eyecan.ai" }]
description = "PACKAGE_DESCRIPTION"
readme = "README.md"
license = { text = "Proprietary License" }
requires-python = ">=3.9,<3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
keywords = []
dependencies = ["typer"]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
dev = ["pylama", "black", "flake8", "isort"]
build = ["hatch", "build"]
docs = [
    "Sphinx==5.1.1",
    "sphinx-immaterial==0.11.3",
    "myst-parser==0.18.0",
    "sphinxcontrib-mermaid==0.7.1",
]

[tool.hatch.build]
dev-mode-dirs = ["."]

[tool.hatch.version]
path = "PACKAGE_NAME/__init__.py"

[project.scripts]
CLI_COMMAND = "PACKAGE_NAME.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
ignore = ["F401", "F841", "F722", "E501"]
